[gd_scene format=3 uid="uid://b2eghjtqhggtb"]

[ext_resource type="Script" uid="uid://bqcw7jvukcf1w" path="res://scripts/boon_card.gd" id="1_k0h6y"]
[ext_resource type="Texture2D" uid="uid://b2g3xslqynf2m" path="res://sprites/coffee_small.png" id="2_qanh6"]
[ext_resource type="Texture2D" uid="uid://cukdto776jsyr" path="res://sprites/milk_small.png" id="3_j1oqs"]

[node name="BoonCard" type="PanelContainer" unique_id=323196718 node_paths=PackedStringArray("title_node", "description_node", "rarity_node")]
offset_right = 728.0
offset_bottom = 50.0
script = ExtResource("1_k0h6y")
title_node = NodePath("HBoxContainer/VBoxContainer/HBoxContainer/Title")
description_node = NodePath("HBoxContainer/VBoxContainer/Description")
rarity_node = NodePath("HBoxContainer/VBoxContainer/HBoxContainer/Rarity")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=37057314]
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer" unique_id=296859158]
layout_mode = 2

[node name="IconDark" type="TextureRect" parent="HBoxContainer" unique_id=787592935]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_qanh6")
expand_mode = 3
stretch_mode = 4

[node name="IconLight" type="TextureRect" parent="HBoxContainer" unique_id=130334447]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("3_j1oqs")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" unique_id=549295080]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer" unique_id=1509790422]
layout_mode = 2

[node name="Title" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer" unique_id=574670498]
layout_mode = 2
text = "Total Motivation"

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer" unique_id=1179114417]
layout_mode = 2
size_flags_horizontal = 3

[node name="Rarity" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer" unique_id=1937147540]
layout_mode = 2
text = "Super rare!"
horizontal_alignment = 2

[node name="Description" type="Label" parent="HBoxContainer/VBoxContainer" unique_id=1544517717]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
text = "This item gives you the motivation to read this description label."
autowrap_mode = 3

[node name="VSeparator" type="VSeparator" parent="HBoxContainer" unique_id=518190864]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer" unique_id=574913268]
layout_mode = 2
text = "Choose"

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_choosing_button_pressed"]
